# cicd

./: .env.example  .gitignore  README.md  deploy.env.example  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
apps/api/: .env.example  pyproject.toml
apps/api/app/: config.py  crud.py  main.py  models.py  schemas.py
apps/api/tests/: test_notes.py
apps/web/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.node.json
apps/web/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  styles.css
docs/: deploy-linux-server.md
docs/superpowers/plans/: 2026-04-30-cicd-fastapi-react.md
docs/superpowers/specs/: 2026-04-30-cicd-fastapi-react-design.md
